--- a/Capstone Project Notebook.ipynb
+++ b/Capstone Project Notebook.ipynb
@@ -4,34 +4,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# This Notebook will be used for Coursera Capstone Project only"
+    "# Coursera Capstone Project:-  Predicting Accident Severity in Seattle - part 1\n",
+    "### Applied Data Science Capstone by IBM&Coursera"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
+    "## Table of contents\n",
+    "* [Business Problem](#problem)\n",
+    "* [Data](#data)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello Capstone Project Course!\n"
-     ]
-    }
-   ],
    "source": [
-    "print(\"Hello Capstone Project Course!\")"
+    "## Business Problem <a name=\"problem\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In USA more than **six million** car accidents occur each year and according to **NHTSA(National Highway Traffic Safety Administration)**, about **6%** of all motor vehicle accidents in the United States result in atleast one death. According to **Wikipedia** 6277 pedestrians were killed in traffic in 2018 int the US.\n",
+    "\n",
+    "What if we could forecast the severity of an accident before hand? What if we predict the chances/possibility that an accident can occur dependng upon road condition, weather condition, traffic at a certain place ,etc. ? What if we can say that today there might be X percentage of chances that accident may occur\n",
+    "\n",
+    "In this project we will try to predict severity of an accident in Seattle depending upon some conditions using machine learning models.Although this project predicts severity of accident in Seattle, we can also implement this method for any city if we have data of accidents occuring in that city since 5 years.This project can be helpfull to Seatle government"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data <a name=\"data\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this project we have used dataset shared on Coursera. This dataset has a total of 38 columns in which 37 columns are features/attributes and one column is  dependent variable or the value to be predicted. Each row/record in this dataet represents accidents happened in Seattle from 2014 to 2020. Dependent/Target variable in this dataset is **SEVERITYCODE**.It has 2 unique values which corresponds to different levels. 1 for prop damage and 2 for injury."
    ]
   },
   {
